--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 <link rel="stylesheet" href="dc-extension-di-transform-v2/styles.40880954ed7352e60827.css"></head>
 <body>
   <amp-root></amp-root>
-<script src="dc-extension-di-transform-v2/runtime-es2015.aa36e2789a7b6e5e7675.js" type="module"></script><script src="dc-extension-di-transform-v2/polyfills-es2015.00d63f1353d1c363651c.js" type="module"></script><script src="dc-extension-di-transform-v2/runtime-es5.d3647fbfa3de00cd0bdf.js" nomodule defer></script><script src="dc-extension-di-transform-v2/polyfills-es5.0834094e2cd1763dd818.js" nomodule defer></script><script src="dc-extension-di-transform-v2/main-es2015.c519e7787500886e0a07.js" type="module"></script><script src="dc-extension-di-transform-v2/main-es5.b6939b1c51f896df7a75.js" nomodule defer></script></body>
+<script src="dc-extension-di-transform-v2/runtime-es2015.aa36e2789a7b6e5e7675.js" type="module"></script>
+<script src="dc-extension-di-transform-v2/polyfills-es2015.00d63f1353d1c363651c.js" type="module"></script>
+<script src="dc-extension-di-transform-v2/runtime-es5.d3647fbfa3de00cd0bdf.js" nomodule defer></script>
+<script src="dc-extension-di-transform-v2/polyfills-es5.0834094e2cd1763dd818.js" nomodule defer></script>
+<script src="dc-extension-di-transform-v2/main-es2015.7a4ee0c8dc612cec3b72.js" type="module"></script>
+<script src="dc-extension-di-transform-v2/main-es5.2505c305e1a225d5f546.js" nomodule defer></script>
+</body>
 </html>
